# realxtend-tundra-deps

./: README
PythonQt/: PythonQt.pro
PythonQt/src/: PythonQt.cpp  PythonQt.h  PythonQtSignalReceiver.cpp
RenderSystem_Null/: CMakeLists.txt  NullGpuProgramManager.cpp  NullHardwareBufferManager.cpp  NullHardwareBufferManager.h  NullHardwareIndexBuffer.cpp  NullHardwareIndexBuffer.h  NullHardwarePixelBuffer.cpp  NullHardwareVertexBuffer.cpp  NullHardwareVertexBuffer.h  NullHlslProgramFactory.cpp  NullHlslProgramFactory.h  NullRenderSystem.cpp  NullRenderSystem.h  NullRenderWindow.cpp  NullRendererDll.cpp  NullTexture.cpp  NullTextureManager.cpp  NullTextureManager.h  README
build_deps/Assimp/lib/: assimp.lib  assimpd.lib
build_deps/Boost/lib/: libboost_date_time-vc100-mt-1_43.lib  libboost_date_time-vc100-mt-gd-1_43.lib  libboost_filesystem-vc100-mt-1_43.lib  libboost_filesystem-vc100-mt-gd-1_43.lib  libboost_system-vc100-mt-1_43.lib  libboost_system-vc100-mt-gd-1_43.lib  libboost_thread-vc100-mt-1_43.lib  libboost_thread-vc100-mt-gd-1_43.lib
build_deps/Bullet/lib/: BulletCollision.lib  BulletDynamics.lib  BulletDynamics_d.lib  ConvexDecomposition.lib  ConvexDecomposition_d.lib  GIMPACTUtils.lib  GIMPACTUtils_d.lib  LinearMath.lib  LinearMath_d.lib  out.txt
build_deps/Hydrax/include/: CfgFileManager.h  Hydrax.h  RttManager.h
build_deps/Hydrax/lib/: Hydrax.lib  Hydraxd.lib
build_deps/Ogre/include/: OgreBuildSettings.h
build_deps/Ogre/lib/: OgreMain.lib  OgreMain_d.lib  OgrePaging.lib  OgrePaging_d.lib  OgreProperty.lib  OgreProperty_d.lib  OgreRTShaderSystem.lib  OgreRTShaderSystem_d.lib  OgreTerrain.lib  OgreTerrain_d.lib  Plugin_BSPSceneManager.lib  Plugin_BSPSceneManager_d.lib  Plugin_CgProgramManager.lib  Plugin_CgProgramManager_d.lib  Plugin_OctreeSceneManager.lib  Plugin_OctreeSceneManager_d.lib  Plugin_OctreeZone.lib  Plugin_OctreeZone_d.lib  Plugin_PCZSceneManager.lib  Plugin_PCZSceneManager_d.lib  Plugin_ParticleFX.lib  Plugin_ParticleFX_d.lib  RenderSystem_Direct3D10.lib  RenderSystem_Direct3D10_d.lib  RenderSystem_Direct3D11.lib  RenderSystem_Direct3D11_d.lib  RenderSystem_Direct3D9.lib  RenderSystem_Direct3D9_d.lib  RenderSystem_GL.lib  RenderSystem_GL_d.lib  RenderSystem_NULL.lib  RenderSystem_NULL_d.lib
build_deps/OpenSSL/lib/: libeay32.lib  ssleay32.lib
build_deps/Python/lib/: _ctypes.lib  _ctypes_d.lib  _ctypes_test.lib  _ctypes_test_d.lib  _elementtree.lib  _elementtree_d.lib  _hashlib.lib  _msi.lib  _msi_d.lib  _multiprocessing.lib  _multiprocessing_d.lib  _socket.lib  _socket_d.lib  _ssl.lib  _testcapi.lib  _testcapi_d.lib  pyexpat.lib  pyexpat_d.lib  python26.lib  python26_d.lib  select.lib  select_d.lib  unicodedata.lib  unicodedata_d.lib  winsound.lib  winsound_d.lib
build_deps/PythonQt/include/: PythonQtSignalReceiver.h
build_deps/PythonQt/lib/: PythonQt.lib  PythonQt_QtAll.lib  PythonQt_QtAll_d.lib  PythonQt_d.lib
build_deps/Qt/lib/: QAxContainer.lib  QAxContainer.prl  QAxContainerd.lib  QAxContainerd.prl  QAxServer.lib  QAxServer.prl  QAxServerd.lib  QAxServerd.prl  QtCLucene.prl  QtCLucene4.lib  QtCLucened.prl  QtCLucened4.lib  QtCore.prl  QtCore4.lib  QtCored.prl  QtCored4.lib  QtDBus.prl  QtDBus4.lib  QtDBusd.prl  QtDBusd4.lib  QtDeclarative.prl  QtDeclarative4.lib  QtDeclaratived.prl  QtDeclaratived4.lib  QtDesigner.prl  QtDesigner4.lib  QtDesignerComponents.prl  QtDesignerComponents4.lib  QtDesignerComponentsd.prl  QtDesignerComponentsd4.lib  QtDesignerd.prl  QtDesignerd4.lib  QtGui.prl  QtGuid.prl  QtHelp.prl  QtHelp4.lib  QtHelpd.prl  QtHelpd4.lib  QtMultimedia.prl  QtMultimedia4.lib  (+53 more)
build_deps/Qt/mkspecs/: qconfig.pri
build_deps/QtPropertyBrowser/lib/: QtPropertyBrowser.lib  QtPropertyBrowserd.lib
build_deps/SkyX/include/: AtmosphereManager.h  ColorGradient.h  MeshManager.h  Prerequisites.h  SkyX.h  VCloudsManager.h
build_deps/SkyX/lib/: SkyX.lib  SkyX_d.lib  SkyXd.lib
build_deps/TinyJson/include/: TinyJson.h
build_deps/celt/lib/: libcelt.lib  libceltd.lib
build_deps/kNet/include/: kNet.h  kNetBuildConfig.h  kNetFwd.h
build_deps/libmumbleclient/lib/: readme.txt
build_deps/libogg/lib/: libogg.lib  liboggd.lib
build_deps/libtheora/lib/: libtheora.lib  libtheorad.lib
build_deps/libvorbis/lib/: libvorbis.lib  libvorbisd.lib  libvorbisfile.lib  (+1 more)
build_deps/speex/: VERSION
hydrax/: CMakeLists.txt  Hydrax.sln  Hydrax.vcxproj  License.txt  README.txt  makefile.macosx
hydrax/debian/: changelog  control  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  hydrax.default.ex  hydrax.doc-base.EX  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
hydrax/include/: RttManager.h
hydrax/msvc9/: Hydrax.sln  Hydrax.vcproj
hydrax/src/: CfgFileManager.cpp  Hydrax.cpp  MaterialManager.cpp  Mesh.cpp  RttManager.cpp
hydrax/src/Modules/ProjectedGrid/: ProjectedGrid.cpp
hydrax/src/Modules/RadialGrid/: RadialGrid.cpp
hydrax/src/Modules/SimpleGrid/: SimpleGrid.cpp
skyx/: CMakeLists.txt  License.txt  README  Readme.txt  makefile
skyx/CMake/: CMakeLists.txt  SkyXDependencies.cmake
skyx/SkyX/: CMakeLists.txt
skyx/SkyX/Include/: BasicController.h  CloudsManager.h  Controller.h  GPUManager.h  MoonManager.h  Prerequisites.h  SkyX.h
skyx/SkyX/Include/VClouds/: DataManager.h  GeometryManager.h
skyx/SkyX/Source/: AtmosphereManager.cpp  BasicController.cpp  CloudsManager.cpp  ColorGradient.cpp  GPUManager.cpp  MeshManager.cpp  MoonManager.cpp  Prerequisites.cpp  SkyX.cpp  VCloudsManager.cpp
skyx/SkyX/Source/VClouds/: DataManager.cpp  Ellipsoid.cpp  FastFakeRandom.cpp  GeometryBlock.cpp  GeometryManager.cpp  VClouds.cpp
skyx/cmake/: FindOgre.cmake
skyx/include/: Prerequisites.h
skyx/include/VClouds/: DataManager.h
skyx/src/: AtmosphereManager.cpp  CloudsManager.cpp  ColorGradient.cpp  GPUManager.cpp  MeshManager.cpp  MoonManager.cpp  SkyX.cpp  VCloudsManager.cpp
skyx/src/VClouds/: DataManager.cpp  Ellipsoid.cpp  FastFakeRandom.cpp  GeometryBlock.cpp  GeometryManager.cpp  VClouds.cpp
(+139 files in other folders)
